# mcp-hub

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  README_NEW.md  USAGE.md  cov.txt  cov2.txt  docker-compose.prod.yml  docker-compose.yml  docker.sh  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_venv.sh  test_config.json  test_mcp_integration.py
.github/workflows/: ci-release.yml  release.yml
config/: config.example.json  config.json
docs/: demo-change.txt
logs/: .gitkeep
src/mcp_hub/: __init__.py  main.py
src/mcp_hub/utils/: auth.py  config_watcher.py  main.py
tests/unit/: test_auth.py  test_auth_jwt.py  test_auth_jwt_extra.py  test_auth_middleware.py  test_cli_init.py  test_config_watcher.py  test_config_watcher_errors.py  test_config_watcher_errors2.py  test_create_sub_app.py  test_graceful_shutdown.py  test_graceful_shutdown_extra.py  test_graceful_shutdown_extra2.py  test_init.py  test_load_config.py  test_main.py  test_main_config_file.py  test_main_config_types.py  test_main_handlers.py  test_main_http_filter.py  test_main_http_filter_extra.py  test_main_mount_prefixes.py  test_main_mount_unmount.py  test_main_proxy.py  test_main_proxy_errors.py  test_main_reload.py  test_main_reload_partial.py  test_main_reload_rollback.py  test_main_validation.py  test_reload_config_handler.py  test_utils_main.py  test_validate_server_config.py
