[project]
name = "mcp-hub"
version = "1.0.0"
description = "A powerful MCP Gateway for aggregating multiple Model Context Protocol servers"
authors = [
    { name = "João Medeiros", email = "joaomede@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "gateway", "proxy", "aggregator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "mcp>=1.12.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.1.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
    "watchdog>=4.0.0",
]

[project.scripts]
mcp-hub = "mcp_hub:app"

[project.urls]
Homepage = "https://github.com/joaomede/mcp-hub"
Repository = "https://github.com/joaomede/mcp-hub"
Issues = "https://github.com/joaomede/mcp-hub/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
]
